addressed pr issues for class and id names as well as spacing

--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -3,7 +3,7 @@
   max-width: 100%;
 }
 
-#myModal {
+#helpModal {
   bottom: -30%;
   right: -50%;
   outline: none;
